cjal-20/12/2018 avances modulo call center

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Index.cshtml
@@ -7,45 +7,21 @@
     <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
     <script src="~/assets/js/pages/ui/notifications.js"></script>
 
-    <script type="text/javascript">
+    <script type="text/javascript">  
         var mensaje = '@ViewBag.Msj';
+        var tipo = '@ViewBag.Tipo';
         if (mensaje != '') {
-            $(window).on("load", showNotification('alert-success', mensaje, 'top', 'center', '', ''));
+            $(window).on("load", showNotification(tipo, mensaje, 'top', 'center', '', ''));
         }
         function AsignarEliminar(idPedido) {
             $("#btnEliminar").attr("data-id", idPedido);
         }
-        $(function () {
-            $("#btnEliminar").click(function () {
-                var id = $("#btnEliminar").attr("data-id")
-                var motivoC = $("#motivo").val();
 
-                debugger
-                // window.location = window.location.protocol + "//" + window.location.host + "/Pedidos/CancelarPedido" + "?idPedido=" + idPedido;
-                var url = "/Pedidos/CancelarPedido";
-
-                $.getJSON(url, { idPedido: id, MotivoCancela: motivoC}, function (data) {
-                        debugger
-                        var x = data;
-                        if (data != "[]") {
-
-
-                        }
-                        else {
-
-
-                        }
-                    });
-
-            });
-        });
         var Cancelar = function () {
-            debugger
             var url = "/Pedidos/CancelarPedido";
             var id = $("#btnEliminar").attr("data-id")
             var motivoC = $("#motivo").val()
             $.get(url, { idPedido: id, MotivoCancela: motivoC }, function (data) {
-
                 window.location.href = '@Url.Action("Index", "Pedidos")';
             });
         };
@@ -115,7 +91,7 @@
                                         </div>
                                         <div class="col-sm-3">
                                             <div class="form-group">
-                                                <input type="submit" value="Nuevo" class="btn btn-raised btn-primary btn-round float-right" />
+                                                <input type="submit" id="btnNuevoCte" value="Nuevo" class="btn btn-raised btn-primary btn-round float-right" />
                                                 <input type="submit" name="Buscar" value="Buscar" formaction=@Url.Action("Buscar") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
                                             </div>
                                         </div>
@@ -123,6 +99,21 @@
                                 </div>
                             </div>
                             <br />
+                            @if (ViewBag.MensajeError != null)
+                            {
+                                <div class="row clearfix">
+                                    <div id="divMensajeError" class="container">
+                                        <div class="alert alert-danger">
+                                            <div class="alert-icon">
+                                                <i class="zmdi zmdi-block"></i>
+                                            </div>
+                                            <strong>
+                                                <label>@ViewBag.MensajeError</label>
+                                            </strong>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
                             <div class="row clearfix">
                                 <div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
                                     <div class="table-responsive">
@@ -172,21 +163,7 @@
                             </div>
                         </div>
                     </div>
-                    @if (ViewBag.MensajeError != null)
-                    {
-                        <div class="row clearfix">
-                            <div id="divMensajeError" class="container">
-                                <div class="alert alert-danger">
-                                    <div class="alert-icon">
-                                        <i class="zmdi zmdi-block"></i>
-                                    </div>
-                                    <strong>
-                                        <label>@ViewBag.MensajeError</label>
-                                    </strong>
-                                </div>
-                            </div>
-                        </div>
-                    }
+
                 </div>
 
             </div>
@@ -209,7 +186,7 @@
                     <div class="modal-footer">
                         @*<input type="button" id="btnEliminar" value="Aceptar" class="btn btn-raised btn-primary btn-round waves-effect" />*@
                         <button type="button" id="btnEliminar" class="btn btn-raised btn-primary btn-round" onclick="Cancelar()">Aceptar</button>
-                        <button type="button" class="btn btn-danger btn-simple btn-round waves-effect" data-dismiss="modal">Cancelar</button>
+                        <button type="button" id="btnclose" class="btn btn-danger btn-simple btn-round waves-effect" data-dismiss="modal">Cancelar</button>
                     </div>
                 </div>
             </div>
