CJAL-21/12/2018- Pedidos-alta clientes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaCliente.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaCliente.cshtml
@@ -237,7 +237,7 @@
                                             <div>
                                                
                                                 <label class="switch">
-                                                    <input type="checkbox">
+                                                    <input type="checkbox" name="VentaExtraordinaria">
                                                     <span class="slider round"></span>
                                                 </label>
                                             </div>
@@ -382,10 +382,8 @@
                                             <input id="txtweb3" name="SitioWeb3" type="text" class="form-control" />
                                         </div>
                                     </div>
-
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -399,8 +397,8 @@
                         </div>
                         <div class="col-lg-7 col-md-7 col-sm-7">
                             <div class="form-group">
-                                <input type="submit" value="Crear" formaction="GuardarCliente" formmethod="post" class="btn btn-raised btn-primary btn-round float-right" />
-
+                                @*<input type="submit" value="Crear" formaction="GuardarCliente" formmethod="post" class="btn btn-raised btn-primary btn-round float-right" />*@
+                                <input type="submit" value="Continuar" formaction="AltaClienteDireccion" formmethod="post" class="btn btn-raised btn-primary btn-round float-right" />
                             </div>
                         </div>
                     </div>
