JOTM-21/12/2018-Cambios credito
cAMBIOS CREDITO

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_pagar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_pagar.xml
@@ -226,6 +226,7 @@
                 android:layout_margin="2sp"
                 android:layout_marginStart="8dp"
                 android:background="@drawable/ripple_effect"
+                android:padding="10sp"
                 android:text="@string/opciones"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="24sp"
@@ -239,8 +240,9 @@
                 style="@style/SagasTheme.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="2sp"
+                android:layout_margin="5sp"
                 android:background="@drawable/ripple_effect"
+                android:padding="10sp"
                 android:text="@string/message_cancel"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="24sp"
@@ -259,6 +261,7 @@
                 android:layout_margin="2sp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/ripple_effect"
+                android:padding="10sp"
                 android:text="@string/confirmar"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="24sp"
