--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/header_buscar_cliente.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/header_buscar_cliente.xml
@@ -54,17 +54,18 @@
 
             <Button
                 android:id="@+id/BtnBuscarClienteActivitySi"
+                style="@style/SagasTheme.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
                 android:layout_weight="1"
-                style="@style/SagasTheme.Button"
                 android:background="@drawable/ripple_effect"
+                android:padding="10sp"
                 android:text="@string/registrar"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="30sp"
-                tools:ignore="ButtonStyle,UnusedAttribute"
-                android:layout_marginLeft="5dp" />
+                tools:ignore="ButtonStyle,UnusedAttribute" />
             <!--  android:text="@string/label_si"-->
         </TableRow>
 
