--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_gas_lista.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_gas_lista.xml
@@ -65,14 +65,15 @@
 
         <Button
             android:id="@+id/BtnPuntoVetaGasListActivityOpciones"
+            style="@style/SagasTheme.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="8sp"
             android:layout_marginBottom="8sp"
-            style="@style/SagasTheme.Button"
             android:background="@drawable/ripple_effect"
             android:gravity="center"
+            android:padding="20sp"
             android:text="@string/opciones"
             android:textAlignment="center"
             android:textColor="@color/colorTextButtonLogin"
@@ -85,15 +86,16 @@
 
         <Button
             android:id="@+id/BtnPuntoVentaGasListaActivityGasListaAgregar"
+            style="@style/SagasTheme.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/ripple_effect"
             android:gravity="center"
+            android:padding="20sp"
             android:text="@string/agregar"
             android:textAlignment="center"
-            style="@style/SagasTheme.Button"
-            android:background="@drawable/ripple_effect"
             android:textColor="@color/colorTextButtonLogin"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -103,14 +105,15 @@
 
         <Button
             android:id="@+id/BtnPuntoVentaGasListActivityPagar"
+            style="@style/SagasTheme.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8sp"
-            style="@style/SagasTheme.Button"
             android:background="@drawable/ripple_effect"
             android:gravity="center"
+            android:padding="20sp"
             android:text="@string/pagar"
             android:textAlignment="center"
             android:textColor="@color/colorTextButtonLogin"
