--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/cliente_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/cliente_item.xml
@@ -19,12 +19,14 @@
 
         <android.support.v7.widget.GridLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="6sp">
 
             <TextView
                 android:id="@+id/textView37"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="3sp"
                 android:paddingStart="15dp"
                 android:paddingEnd="22dp"
                 android:text="@string/cel"
@@ -38,6 +40,7 @@
                 android:id="@+id/TVBuscarClienteActivityTelefono"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
+                android:layout_margin="3sp"
                 android:textSize="14sp"
                 app:layout_column="1"
                 app:layout_columnSpan="3"
@@ -49,6 +52,7 @@
                 android:id="@+id/textView42"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="3sp"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:text="@string/nom"
@@ -62,6 +66,7 @@
                 android:id="@+id/TVBuscarClienteActivityNombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="3sp"
                 android:textSize="14sp"
                 app:layout_column="1"
                 app:layout_columnSpan="3"
@@ -72,6 +77,7 @@
                 android:id="@+id/textView38"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="3sp"
                 android:paddingStart="15dp"
                 android:paddingEnd="23dp"
                 android:text="@string/rfc"
@@ -84,8 +90,10 @@
                 android:id="@+id/TVBuscarClienteaCTIVITYrFC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="18sp"
+                android:layout_margin="3sp"
+                android:layout_marginEnd="15sp"
+                android:textSize="14sp"
+                android:textStyle="bold"
                 app:layout_column="1"
                 app:layout_gravity="fill"
                 app:layout_row="2" />
@@ -94,6 +102,8 @@
                 android:id="@+id/textView40"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="3sp"
+                android:layout_marginStart="15sp"
                 android:text="@string/factura"
                 android:textSize="14sp"
                 app:layout_column="2"
@@ -102,8 +112,9 @@
 
             <TextView
                 android:id="@+id/TvBuscarClienteActivityFactura"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="3sp"
                 android:textSize="14sp"
                 app:layout_column="3"
                 app:layout_gravity="fill"
