--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/punto_venta_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/punto_venta_item.xml
@@ -47,14 +47,14 @@
                 android:id="@+id/ETPuntoVentaGasListActivityCantidad"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="numberDecimal"
+                android:textColor="@color/colorTextLogin"
                 android:textSize="30sp"
                 app:layout_column="2"
                 app:layout_gravity="fill"
                 app:layout_row="2"
-                tools:targetApi="P"
-                android:textColor="@color/colorTextLogin"
-                tools:ignore="Autofill,LabelFor" />
+                tools:ignore="Autofill,LabelFor"
+                tools:targetApi="P" />
 
             <TextView
                 android:id="@+id/PuntoVentaGasListActivityTituloCantidad"
